<resources>
    <string name="app_name">QuotesApp</string>
    <string name="birthday">Birthday</string>
    <string name="quotes">Quotes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="motivational">Motivational</string>
    <string name="success">Success</string>
    <string name="friendship">Friendship</string>
    <string name="congratulation">Congratulation</string>
    <string name="love">Love</string>
    <string name="poem">Poem</string>
    <string name="quote_example">Give me my Romeo; and, when I shall die,
Take him and cut him out in little stars,
And he will make the face of heaven so fine
That all the world will be in love with night,
And pay no worship to the garish sun</string>
    <string name="event">Event</string>
    <string name="paste">Paste</string>
    <string name="save">Save</string>
    <string name="status">Status</string>
    <string name="clear_all">Clear All</string>
    <string name="mood">Mood</string>
    <string name="funny">Funny</string>
    <string name="type_your_quote">Type your quote</string>
    <string name="search">Search</string>
</resources>
