<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgnd_quotes"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linear_layout_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linear_layout_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/motivational_card_view"
                style="@style/Widget.MyApp.MaterialCardView"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp">

                <LinearLayout
                    android:id="@+id/motivational_section"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/dimen_8dp">

                    <ImageView
                        android:id="@+id/motivational_icon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="8dp"
                        app:srcCompat="@drawable/ic_cake_green_24dp" />

                    <TextView
                        android:id="@+id/motivational_tv"
                        style="@style/TextAppearance.AppCompat.CardView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/motivational" />

                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/success_card_view"
                style="@style/Widget.MyApp.MaterialCardView"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp">

                <LinearLayout
                    android:id="@+id/success_section"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/dimen_8dp">

                    <ImageView
                        android:id="@+id/success_icon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="8dp"
                        app:srcCompat="@drawable/ic_cake_green_24dp" />

                    <TextView
                        android:id="@+id/inspiration_tv"
                        style="@style/TextAppearance.AppCompat.CardView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/success" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linear_layout_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout_1">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/poem_card_view"
                style="@style/Widget.MyApp.MaterialCardView"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp">

                <LinearLayout
                    android:id="@+id/poem_section"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/dimen_8dp">

                    <ImageView
                        android:id="@+id/poem_icon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="8dp"
                        app:srcCompat="@drawable/ic_cake_green_24dp" />

                    <TextView
                        android:id="@+id/poem_tv"
                        style="@style/TextAppearance.AppCompat.CardView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/poem" />

                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/love_card_view"
                style="@style/Widget.MyApp.MaterialCardView"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:id="@+id/love_section"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/dimen_8dp">

                    <ImageView
                        android:id="@+id/love_icon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="8dp"
                        app:srcCompat="@drawable/ic_cake_green_24dp" />

                    <TextView
                        android:id="@+id/love_tv"
                        style="@style/TextAppearance.AppCompat.CardView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/love" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout_2">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/congratulation_card_view"
                style="@style/Widget.MyApp.MaterialCardView"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp">

                <LinearLayout
                    android:id="@+id/congratulation_section"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/dimen_8dp">

                    <ImageView
                        android:id="@+id/congratulation_icon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="8dp"
                        app:srcCompat="@drawable/ic_cake_green_24dp" />

                    <TextView
                        android:id="@+id/congratulation_tv"
                        style="@style/TextAppearance.AppCompat.CardView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/congratulation" />

                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/friendship_card_view"
                style="@style/Widget.MyApp.MaterialCardView"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:id="@+id/friendship_section"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/dimen_8dp">

                    <ImageView
                        android:id="@+id/friendship_icon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="8dp"
                        app:srcCompat="@drawable/ic_cake_green_24dp" />

                    <TextView
                        android:id="@+id/friendship_tv"
                        style="@style/TextAppearance.AppCompat.CardView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/friendship" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>